# chocolate-quake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous_integration.yml
src/: CMakeLists.txt  main.c
src/camera/: chase.c  view.c
src/client/: cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c
src/client/include/: client.h
src/cmd/: cmd.c
src/cmd/include/: cmd.h
src/common/: CMakeLists.txt  com_argv.c  com_byte.c  com_ext.c  com_fs.c  com_init.c  com_msg.c  com_sizebuf.c  com_stdio.c  com_stdlib.c  com_string.c  com_token.c
src/common/include/: common.h
src/common/src/: com_msg.c
src/console/: console.c  cvar.c
src/console/include/: console.h
src/crc/: crc.c
src/crc/include/: crc.h
src/end_screen/: es_buffer.c  es_font.c  es_font.h  es_palette.c  es_time.c  es_window.c  es_window.h
src/end_screen/src/: es_buffer.c  es_window.c
src/host/: host.c  host_cmd.c
src/host/include/: host.h
src/input/: CMakeLists.txt  in_gamepad.c  in_mouse.c  keys.c
src/input/include/: keys.h
src/mathlib/: mathlib.c
src/mathlib/include/: mathlib.h
src/memory/: CMakeLists.txt  zone.c
src/memory/include/: zone.h
src/memory/src/: zone.c
src/menu/: menu.c
src/menu/include/: menu.h
src/menu/src/: menu.c
src/model/: model.c
src/model/include/: bspfile.h  model.h  modelgen.h  spritegn.h
src/net/: net_dgrm.c  net_dgrm.h  net_drivers.c  net_loop.c  net_loop.h  net_main.c  net_poll.c  net_socket.c  net_socket.h  net_udp.c  net_udp.h  net_vcr.c  net_vcr.h
src/net/include/: net.h
src/net/src/: net_udp.c
src/progs/: pr_cmds.c  pr_edict.c  pr_exec.c
src/progs/include/: pr_comp.h  progdefs.h  progs.h
src/renderer/: d_edge.c  d_fill.c  d_init.c  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  draw.c  r_aclip.c  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_efrag.c  r_light.c  r_main.c  r_misc.c  r_part.c  r_sky.c  r_sprite.c  r_surf.c  r_vars.c
src/renderer/include/: d_iface.h  d_local.h  draw.h  r_local.h  r_shared.h  render.h
src/screen/: screen.c
src/screen/include/: screen.h
src/server/: sv_main.c  sv_move.c  sv_phys.c  sv_user.c  world.c
src/server/include/: server.h  world.h
src/sound/: CMakeLists.txt  bgmusic.c  snd_codec.c  snd_codec.h  snd_dma.c  snd_flac.c  snd_mem.c  snd_mix.c  snd_mp3.c  snd_mp3.h  snd_mp3tag.c  snd_sdl.c  snd_vorbis.c  snd_wave.c
src/sound/include/: bgmusic.h  sound.h
src/status_bar/: sbar.c
src/status_bar/include/: sbar.h
src/sys/: CMakeLists.txt  sys.c
src/sys/include/: sys.h
src/video/: vid_buffers.c  vid_main.c  vid_menu.c  vid_menu.h  vid_modes.c  vid_modes.h  vid_window.c
src/video/include/: vid.h
src/wad/: wad.c
src/wad/include/: wad.h
